# onnxruntime-cxx-sample

./: .gitignore  CMakeLists.txt  test.cpp
assets/: README.md
